@@ -18,6 +18,7 @@ version 2.8.1 (MM/DD/YYYY):
 	Gadu-Gadu:
 	* Fixed searching for buddies in public directory. (Tomasz Wasilczyk)
 	  (#5242)
+	* Better status message handling. (Tomasz Wasilczyk) (#14314)
 
 version 2.8.0 (06/07/2011):
 	General:
